--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-}
+	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.6.14'
+	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa'
+	runtimeOnly 'com.h2database:h2'
 
+}
 tasks.named('test') {
 	useJUnitPlatform()
 }
